test/fixtures/complex/invalid/declaration_recovery_1.mf2
.foo $var %.local $hello = {world}
{{}}
=== spans ===
                    .foo $var %.local $hello = {world}↵{{}}
ComplexMessage      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 0:0-1:4
LocalDeclaration               ^^^^^^^^^^^^^^^^^^^^^^^      0:11-0:34
Variable                              ^^^^^^                0:18-0:24
LiteralExpression                              ^^^^^^^      0:27-0:34
Text                                            ^^^^^       0:28-0:33
QuotedPattern                                          ^^^^ 1:0-1:4
Pattern                                                     1:2-1:2
Text                                                        1:2-1:2
=== diagnostics ===
Found a statement that is invalid because the keyword 'foo' is keyword. (at @0..11)
  .foo $var %.local $hello = {world}↵{{}}
  ^^^^^^^^^^^
=== ast ===
ComplexMessage {
    span: @0..39,
    declarations: [
        LocalDeclaration {
            start: @11,
            variable: Variable {
                span: @18..24,
                name: "hello",
            },
            expression: LiteralExpression {
                span: @27..34,
                literal: Text {
                    start: @28,
                    content: "world",
                },
                annotation: None,
                attributes: [],
            },
        },
    ],
    body: QuotedPattern {
        span: @35..39,
        pattern: Pattern {
            parts: [
                Text {
                    start: @37,
                    content: "",
                },
            ],
        },
    },
}